@@ -10,10 +10,11 @@ Legend:
  % Development flag or note, such as branching.
 
 
-Pretty URLs 0.9.3                                                 ?
+Pretty URLs 0.9.3                                                    6 May, 2009
 ================================================================================
  ! Boards/Topics: Fix SMF bug #3418 (QueryString.php)
  ! Boards/Topics: Always unset $_GET['pretty'] in SMF2. Never before. (QueryString.php)
+ ! Base: Quotes are back finally... (PrettyUrls-Filters.php)
 
 Pretty URLs 0.9.2                                                 25 March, 2009
 ================================================================================
